# Tm-Work

./: .gitignore  DEPLOY_GUIDE.md  FRONTEND_GUIDE.md  GEMINI.md  LINKS.md  NGROK_GUIDE.md  README.md  index.html  package-lock.json  repro_profile_update.py  run.py  script.js  style.css
backend/: .env  .env.example  API_DOCUMENTATION.md  API_QUICKSTART.md  Dockerfile  README.md  conftest.py  db.sqlite3  entrypoint.sh  manage.py  ml_test.py  pyproject.toml  pytest.ini  repro_norm.py  repro_search.py  seed_vip.py  test_norm.py  test_talent_search.py
backend/api/v1/: urls.py
backend/apps/administration/: models.py  permissions.py  serializers.py  serializers_admin.py  services.py  urls.py  views.py  views_admin.py
backend/apps/chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/core/: search.py
backend/apps/escrow/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/jobs/: admin.py  models.py  search.py  serializers.py  services.py  urls.py  views.py
backend/apps/notifications/: models.py  serializers.py  signals.py  utils.py  views.py
backend/apps/profiles/: admin.py  models.py  search.py  serializers.py  urls.py  views.py
backend/apps/proposals/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/reviews/: apps.py  models.py  serializers.py  (+2 more)
backend/config/: asgi.py  urls.py
backend/requirements/: base.txt  dev.txt  test.txt
backend/scripts/: initialize_dev_data.py
backend/tests/: factories.py  test_complete_workflow.py
(+311 files in other folders)
