[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "username", email = "mail@ex.com" }
]
requires-python = ">=3.14"
dependencies = [
    "channels>=4.0.0",
    "channels-redis>=4.1.0",
    "colorlog>=6.10.1",
    "daphne>=4.0.0",
    "django>=5.0,<6.0",
    "django-cors-headers>=4.3.0",
    "django-environ>=0.11.2",
    "django-ratelimit>=4.1.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.1",
    "drf-spectacular>=0.27.0",
    "pillow>=10.2.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "channels>=4.0.0",
    "channels-redis>=4.1.0",
    "colorlog>=6.10.1",
    "daphne>=4.0.0",
    "django>=5.0,<6.0",
    "django-cors-headers>=4.3.0",
    "django-debug-toolbar>=4.2.0",
    "django-environ>=0.11.2",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.1",
    "drf-spectacular>=0.27.0",
    "ipython>=8.18.0",
    "pillow>=10.2.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=23.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
]
prod = [
    "gunicorn>=21.2.0",
]
